force-app/main/default/objects/VoosFaturados__c/VoosFaturados__c.object-meta.xml
<CustomObject>
    <label>Voo Faturado</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Voo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voos Faturados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>