force-app/main/default/objects/VoosFaturados__c/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagamento</label>
    <referenceTo>Pagamento__c</referenceTo>
    <relationshipLabel>Voos Faturados</relationshipLabel>
    <relationshipName>VoosFaturados</relationshipName>
    <type>Lookup</type>
</CustomField>