force-app/main/default/objects/VoosFaturados__c/fields/StatusdoFaturamento__c.field-meta.xml
<CustomField>
    <fullName>StatusdoFaturamento__c</fullName>
    <label>Status do Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faturamento Gerado</fullName>
            </value>
            <value>
                <fullName>Boleto Gerado</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>